# tansaku

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md
ainimvp-recorder/: AGENTS.md  README.md  package-lock.json  package.json
animal-voice-changer/: .gitignore  Cargo.toml  build.rs
copilot-sdk-python-demo/: README.md  main.py  repos.example.yaml  repos.yaml  requirements.txt  test_main.py
design-collection/: .gitignore  AGENTS.md  INTEGRATION_GUIDE.md  Makefile  implementation_plan.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  walkthrough.md
fullscreen-alert/: .gitignore  Makefile  project.yml
gemini-audio-cli/: .env.example  README.md  index.js  package-lock.json  package.json
git-plant/: README.md  pyproject.toml
git-plant/git_plant/: cli.py  constants.py  git_parser.py  models.py  tree_builder.py
git-plant/git_plant/renderer/: simple.py
git-plant/tests/: test_builder.py
github-cycle-time-cli/: README.md  index.ts  package-lock.json  package.json
glitch-art-maker/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
go-testlist-cli/: go.mod
in-your-face/: package-lock.json  package.json
ios-whisper-demo/: .gitignore  README.md
jetbrains-go-tabletest-viewer/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  test_output.txt  test_output_2.txt
local-whisper-cli/: .gitignore  Cargo.toml  README.md
local-whisper-cli/src/: main.rs
local-whisper-tauri/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
local-whisper-tauri/src-tauri/: Cargo.toml  tauri.conf.json
local-whisper-tauri/src-tauri/capabilities/: default.json
local-whisper-tauri/src-tauri/scripts/: pyannote_diarize.py
local-whisper-tauri/src-tauri/src/: lib.rs
local-whisper-tauri/src-tauri/src/commands/: diarization.rs  mod.rs  transcription.rs
local-whisper-tauri/src-tauri/src/services/: dependencies.rs  diarization.rs  mod.rs  pyannote.rs  transcriber.rs
macOS_TypoZero_ChatGPT/: index.html
meeting-notifier/: .env.example  .gitignore  index.html  notification.html  package.json  tailwind.config.js  vite.config.ts
meeting-notifier/src-tauri/: Cargo.toml  tauri.conf.json
meeting-notifier/src-tauri/capabilities/: default.json
meeting-notifier/src-tauri/src/: lib.rs  main.rs
meeting-notifier/src-tauri/src/commands/: auth.rs  calendar.rs  mod.rs  notification.rs  settings.rs
meeting-notifier/src-tauri/src/infrastructure/: google_api.rs  mod.rs  settings_store.rs  token_store.rs
meeting-notifier/src-tauri/src/models/: auth.rs  event.rs  mod.rs  settings.rs
meeting-notifier/src-tauri/src/platform/: fallback.rs  macos.rs  mod.rs  windows.rs
meeting-notifier/src-tauri/src/services/: auth_service.rs  calendar_service.rs  mod.rs  scheduler.rs  url_extractor.rs
mouse-marathon/: README.md  STORE_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
mouse-marathon/src-tauri/: Cargo.toml  tauri.conf.json
mouse-marathon/src-tauri/src/: lib.rs
openai-stt-eval/: .gitignore  README.md  go.mod  main.go  scenarios.example.json
openai-transcript-format-eval/: .gitignore  README.md  go.mod  main.go  scenarios.example.json
palette-app/: README.md  index.html  (+3 more)
(+318 files in other folders)
