[package]
name = "local-whisper-tauri"
version = "0.1.0"
description = "Local Whisper desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.4", features = [] }

[dependencies]
tauri = { version = "=2.9.5", features = [] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tar = "0.4"
xz2 = "0.1"
zip = "0.6"
num_cpus = "1"
whisper-rs = "0.15.1"
time = "=0.3.36"
