[package]
name = "meeting-notifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "meeting_notifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3" }
regex = "1"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
open = "5"
urlencoding = "2"
