[package]
name = "mouse-marathon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-opener = "2.2.0"
tauri-plugin-store = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.0"
